objects/AR_Object__c.object
<CustomObject>
    <fields>
        <fullName>AR_Field1__c</fullName>
        <description>Add AR-Field1</description>
        <label>AR-Field1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PAr_field__c</fullName>
        <label>PAr field</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SAR_field2__c</fullName>
        <label>SAR field2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SARfIeld2__c</fullName>
        <description>ADD SARfIeld2</description>
        <label>SARfIeld2</label>
        <type>Phone</type>
    </fields>
    <label>AR-ACCObject</label>
    <nameField>
        <label>AR-Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AR-ACCObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Ar_veldaterule1</fullName>
        <active>true</active>
        <description>AR-ACCObject</description>
        <errorConditionFormula>ISBLANK( AR_Field1__c )</errorConditionFormula>
        <errorMessage>Pleae enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PAr_valruel1</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( PAr_field__c )</errorConditionFormula>
        <errorMessage>enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sARvaldaterule2</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( SARfIeld2__c )</errorConditionFormula>
        <errorMessage>eanter a value</errorMessage>
    </validationRules>
</CustomObject>